feat: test python cmd in python shell

--- a/.github/workflows/simple.yml
+++ b/.github/workflows/simple.yml
@@ -13,3 +13,8 @@ jobs:
           node -v
           npm -v
           pwsh
+      - name: python Commands
+        run: |
+          import platform
+          print(platform.processor())
+        shell: python
