--- a/.github/workflows/env.yml
+++ b/.github/workflows/env.yml
@@ -14,18 +14,18 @@ jobs:
           STEP_ENV: Available to only this step         #available to step
         run: |
           echo: "WF_ENV: ${WF_ENV}"
-          echo: "WF_ENV: ${JOB_ENV}"
-          echo: "WF_ENV: ${STEP_ENV}"
+          echo: "JOB_ENV: ${JOB_ENV}"
+          echo: "STEP_ENV: ${STEP_ENV}"
       - name: Log ENV 2
-        run: |
+        run: |                                      #this STEP_ENV will not print
           echo: "WF_ENV: ${WF_ENV}"
-          echo: "WF_ENV: ${JOB_ENV}"
-          echo: "WF_ENV: ${STEP_ENV}"                   #this one will not print
+          echo: "JOB_ENV: ${JOB_ENV}"
+          echo: "STEP_ENV: ${STEP_ENV}"
   log-default-env:
     runs-on: ubuntu-latest
     steps:
-     - name: Default ENV variables
-       run: |
+     - name: Default ENV variables  
+       run: |                                         #this JOB_ENV and STEP_ENV will not print
          echo "Home: ${HOME}"
          echo "GITHUB_WF: ${GITHUB_WORKFLOW}"
          echo "GITHUB_ACTION: ${GITHUB_ACTION}"
@@ -37,5 +37,5 @@ jobs:
          echo "GITHUB_SHA: ${GITHUB_SHA}"
          echo "GITHUB_REF: ${GITHUB_REF}"
          echo: "WF_ENV: ${WF_ENV}"
-         echo: "WF_ENV: ${JOB_ENV}"                    #this one will not print
-         echo: "WF_ENV: ${STEP_ENV}"                   #this one will not print
+         echo: "JOB_ENV: ${JOB_ENV}"
+         echo: "STEP_ENV: ${STEP_ENV}"
