--- a/.github/workflows/env.yml
+++ b/.github/workflows/env.yml
@@ -13,14 +13,14 @@ jobs:
         env:
           STEP_ENV: Available to only this step         #available to step
         run: |
-          echo: "WF_ENV: ${WF_ENV}"
-          echo: "JOB_ENV: ${JOB_ENV}"
-          echo: "STEP_ENV: ${STEP_ENV}"
+          echo "WF_ENV: ${WF_ENV}"
+          echo "JOB_ENV: ${JOB_ENV}"
+          echo "STEP_ENV: ${STEP_ENV}"
       - name: Log ENV 2
         run: |                                      #this STEP_ENV will not print
-          echo: "WF_ENV: ${WF_ENV}"
-          echo: "JOB_ENV: ${JOB_ENV}"
-          echo: "STEP_ENV: ${STEP_ENV}"
+          echo "WF_ENV: ${WF_ENV}"
+          echo "JOB_ENV: ${JOB_ENV}"
+          echo "STEP_ENV: ${STEP_ENV}"
   log-default-env:
     runs-on: ubuntu-latest
     steps:
@@ -36,6 +36,6 @@ jobs:
          echo "GITHUB_WORKSPACE: ${GITHUB_WORKSPACE}"
          echo "GITHUB_SHA: ${GITHUB_SHA}"
          echo "GITHUB_REF: ${GITHUB_REF}"
-         echo: "WF_ENV: ${WF_ENV}"
-         echo: "JOB_ENV: ${JOB_ENV}"
-         echo: "STEP_ENV: ${STEP_ENV}"
+         echo "WF_ENV: ${WF_ENV}"
+         echo "JOB_ENV: ${JOB_ENV}"
+         echo "STEP_ENV: ${STEP_ENV}"
