--- a/.github/workflows/env.yml
+++ b/.github/workflows/env.yml
@@ -7,7 +7,25 @@ jobs:
   create-issue:
     runs-on: ubuntu-latest
     steps:
-    - name: Create issue using REST API
+    - name: Push a random file
+      run: |                            #"git@github.com:joaopinho-git/github-actions-test.git"
+        pwd
+        ls -la
+        git init 
+        git remote add origin "https://$GITHUB_ACTOR:${{ secrets.GITHUB_TOKEN }}@github.com/$GITHUB_REPOSITORY.git"
+        git config --global user.email "my-bot@bot.com"
+        git config --global user.name "my-bot"
+        git fetch
+        git checkout master
+        git branch --set-upstream-to=origin/master
+        git pull
+        ls -la
+        echo $RANDOM >> random.txt
+        ls -la
+        git add .
+        git commit -m"Random file"
+        git push
+    - name: Create issue using REST API 
       run: |
         curl --request POST \
         --url https://api.github.com/repos/${{ github.repository }}/issues \
