--- a/.github/workflows/env.yml
+++ b/.github/workflows/env.yml
@@ -4,6 +4,18 @@ env:
   WF_ENV: Available to all jobs             #available to all jobs
 
 jobs:
+  decrypt:
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v1
+    - name: Decrypt file
+      run: !
+        gpg --quiet --batch --yes --decrypt --passphrase="$PASSPHRASE" --output $HOME/secret.json secret.json.gpg
+        ls -la        
+      env:
+        PASSPHRASE: ${{ secrets.PASSPHRASE }}
+    - name: Print file content
+      run: cat $HOME/secret.json        #just for test purpose
   create-issue:
     runs-on: ubuntu-latest
     steps:
