--- a/.github/workflows/env.yml
+++ b/.github/workflows/env.yml
@@ -9,7 +9,7 @@ jobs:
     steps:
     - uses: actions/checkout@v1
     - name: Decrypt file
-      run: !
+      run: |
         gpg --quiet --batch --yes --decrypt --passphrase="$PASSPHRASE" --output $HOME/secret.json secret.json.gpg
         ls -la        
       env:
