feat: node version

--- a/.github/workflows/context.yml
+++ b/.github/workflows/context.yml
@@ -1,6 +1,6 @@
 name: Context
 
-on: push
+on: [push, pull_request]
 
 jobs:
   functions:
@@ -15,6 +15,7 @@ jobs:
           echo ${{ format( 'Hello {0} {1} {2}', 'World', '!', '!' ) }}
   one:
     runs-on: ubuntu-latest
+    if: github.event_name == 'push'
     steps:
       - name: Dump GitHub context
         env:
