--- a/.github/workflows/container.yml
+++ b/.github/workflows/container.yml
@@ -8,32 +8,38 @@ jobs:
     container:
       image: node:10.18.0-jessie
     steps:
-      - name: log node version jessie
-        run: node -v
-      - name: Step with docker-steps
+      # - name: log node version jessie
+      #   run: node -v
+      # - name: Step with docker-steps
+      #   uses: docker://node:12.14.1-alpine3.10
+      #   with:
+      #     entrypoint: '/bin/echo'
+      #     args: 'Hello World'
+      # - name: Log node with entrypoint
+      #   uses: docker://node:12.14.1-alpine3.10
+      #   with:
+      #     entrypoint: /usr/local/bin/node
+      #     args: -v
+      - uses: actions/checkiout@v1
+      - name: Run Script
         uses: docker://node:12.14.1-alpine3.10
         with:
-          entrypoint: '/bin/echo'
-          args: 'Hello World'
-      - name: Log node with entrypoint
-        uses: docker://node:12.14.1-alpine3.10
-        with:
-          entrypoint: /usr/local/bin/node
-          args: -v
-  node-docker:
-    runs-on: ubuntu-latest
-    services:
-      app: 
-        image: alialaa17/node-api
-        ports: 
-          - 3001:3000
-      mongo:
-        image: mongo
-        ports: 
-          - 27017:27017     
-    steps:
-      - name: Post a user
-        run: 'curl -X POST http://localhost:3001/api/user -H ''Content-Type: application/json'' -d ''{"username": "hello","address": "dwded"}'''
-      - name: Get Users
-        run: curl http://localhost:3001/api/users
+          entrypoint: ./script.sh
+          args: "String comming from argument"
+  # node-docker:
+  #   runs-on: ubuntu-latest
+  #   services:
+  #     app: 
+  #       image: alialaa17/node-api
+  #       ports: 
+  #         - 3001:3000
+  #     mongo:
+  #       image: mongo
+  #       ports: 
+  #         - 27017:27017     
+  #   steps:
+  #     - name: Post a user
+  #       run: 'curl -X POST http://localhost:3001/api/user -H ''Content-Type: application/json'' -d ''{"username": "hello","address": "dwded"}'''
+  #     - name: Get Users
+  #       run: curl http://localhost:3001/api/users
 
