--- a/.github/workflows/container.yml
+++ b/.github/workflows/container.yml
@@ -5,8 +5,8 @@ on: push
 jobs:
   docker-steps:
     runs-on: ubuntu-latest
-    container:
-      image: node:10.18.0-jessie
+    #container:
+    #  image: node:10.18.0-jessie
     steps:
       # - name: log node version jessie
       #   run: node -v
@@ -22,12 +22,12 @@ jobs:
       #     args: -v
       - uses: actions/checkout@v1
       - name: give permissions to SH that came from windows
-        run: chmod +x $HOME/script.sh
-      - name: Run Script
-        uses: docker://node:12.14.1-alpine3.10
-        with:
-          entrypoint: ./script.sh
-          args: "String comming from argument"
+        run: la -la;pwd #chmod +x $HOME/script.sh
+      #- name: Run Script
+      #  uses: docker://node:12.14.1-alpine3.10
+      #  with:
+      #    entrypoint: ./script.sh
+      #    args: "String comming from argument"
   # node-docker:
   #   runs-on: ubuntu-latest
   #   services:
