--- a/.github/workflows/container.yml
+++ b/.github/workflows/container.yml
@@ -22,7 +22,7 @@ jobs:
       #     args: -v
       - uses: actions/checkout@v1
       - name: give permissions to SH that came from windows
-        run: la -la;pwd #chmod +x $HOME/script.sh
+        run: ls -la;pwd #chmod +x $HOME/script.sh
       #- name: Run Script
       #  uses: docker://node:12.14.1-alpine3.10
       #  with:
