--- a/.github/workflows/container.yml
+++ b/.github/workflows/container.yml
@@ -22,12 +22,12 @@ jobs:
       #     args: -v
       - uses: actions/checkout@v1
       - name: give permissions to SH that came from windows
-        run: ls -la;pwd #chmod +x $HOME/script.sh
-      #- name: Run Script
-      #  uses: docker://node:12.14.1-alpine3.10
-      #  with:
-      #    entrypoint: ./script.sh
-      #    args: "String comming from argument"
+        run: ls -la;pwd;chmod +x script.sh
+      - name: Run Script
+        uses: docker://node:12.14.1-alpine3.10
+        with:
+          entrypoint: ./script.sh
+          args: "String comming from argument"
   # node-docker:
   #   runs-on: ubuntu-latest
   #   services:
