--- a/.github/workflows/container.yml
+++ b/.github/workflows/container.yml
@@ -27,7 +27,7 @@ jobs:
         uses: docker://node:12.14.1-alpine3.10
         with:
           entrypoint: ./script.sh
-          args: "String comming from argument"
+          args: 'String comming from argument'
   # node-docker:
   #   runs-on: ubuntu-latest
   #   services:
