--- a/.github/workflows/container.yml
+++ b/.github/workflows/container.yml
@@ -33,7 +33,7 @@ jobs:
           args: 'String comming from argument'
       - name: Slack message
         run: |
-          ./slack.ps1 -ChannelName "testechan" -Message "Message from container in github Actions" -FarfetchToken ${{ secrets.FARFETCHSLACKTOKEN }}
+          ./slack.ps1 -ChannelName "testechan" -Message "Message from container in github Actions" -FarfetchToken "${{ secrets.FARFETCHSLACKTOKEN }}"
           cat slack.ps1
   # node-docker:
   #   runs-on: ubuntu-latest
