--- a/.github/workflows/container.yml
+++ b/.github/workflows/container.yml
@@ -32,9 +32,9 @@ jobs:
           entrypoint: ./script.sh
           args: 'String comming from argument'
       - name: Slack message
-        run: |
-          /bin/pwsh ./slack.ps1 -ChannelName "testechan" -Message "Message from container in github Actions" -FarfetchToken "${{ secrets.FARFETCHSLACKTOKEN }}"
-          cat slack.ps1
+        run: type -a pwsh #|
+          #/bin/pwsh ./slack.ps1 -ChannelName "testechan" -Message "Message from container in github Actions" -FarfetchToken "${{ secrets.FARFETCHSLACKTOKEN }}"
+          #cat slack.ps1
   # node-docker:
   #   runs-on: ubuntu-latest
   #   services:
