--- a/.github/workflows/slack.yml
+++ b/.github/workflows/slack.yml
@@ -7,4 +7,4 @@ jobs:
     steps: 
       - name: pull_request Message
         run: |
-          curl -X POST -H 'Content-type: application/json' -- data '{"text":"New pull_request created: <${{ github.event.pulls.html_url }}|${{ github.event.pulls.pull_request }}.>"}' ${{ secrets.SLACK_WEBHOOK }} 
+          curl -X POST -H 'Content-type: application/json' -- data '{"text":"New pull_request created: <${{ github.event.issue.pull_request.html_url }}|${{ github.event.issue.pull_request.title }}.>"}' ${{ secrets.SLACK_WEBHOOK }} 
