--- a/.github/workflows/slack.yml
+++ b/.github/workflows/slack.yml
@@ -1,5 +1,7 @@
 name: Slack Notifications
-on: pull_request
+on: 
+  pull_request:
+    types: [opened]
 
 jobs:
   slack-message:
@@ -7,4 +9,4 @@ jobs:
     steps: 
       - name: pull_request Message
         run: | 
-          curl -X POST -H 'Content-type: application/json' --data '{"text":"New issue created: <${{ github.event.issue.html_url }}|${{ github.event.issue.title }}.>"}' ${{ secrets.SLACK_WEBHOOK }}
+          curl -X POST -H 'Content-type: application/json' --data '{"text":"New issue created: <${{ github.event.pull_request.html_url }}|${{ github.event.pull_request.title }}.>"}' ${{ secrets.SLACK_WEBHOOK }}
