--- a/.github/workflows/slack.yml
+++ b/.github/workflows/slack.yml
@@ -9,4 +9,4 @@ jobs:
     steps: 
       - name: pull_request Message
         run: | 
-          curl -X POST -H 'Content-type: application/json' --data '{"text":"New issue created: <${{ github.event.pull_request.html_url }}|${{ github.event.pull_request.title }}.>"}' ${{ secrets.SLACK_WEBHOOK }}
+          curl -X POST -H 'Content-type: application/json' --data '{"text":"New Pull Request created: <${{ github.event.pull_request.html_url }}|${{ github.event.pull_request.title }}>; ${{ github.event.pull_request.body }}"}' ${{ secrets.SLACK_WEBHOOK }}
