--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,79 +1,79 @@
-# name: CI
+name: CI
 
-# on:
-#   pull_request:
-#     branches: [develop, master]
-#   push:                   #used automatically after merge to DEV
-#     branches: [develop, master]
+on:
+  pull_request:
+    branches: [develop, master22]
+  push:                   #used automatically after merge to DEV
+    branches: [develop, master22]
 
-# jobs:
-#   build:
-#     runs-on: ubuntu-latest
-#     env: 
-#       SURGE_LOGIN: ${{ secrets.SURGE_LOGIN }}
-#       SURGE_TOKEN: ${{ secrets.SURGE_TOKEN }}
-#     steps:
-#       - uses: actions/checkout@v2
-#       - name: Cache node-modules
-#         uses: actions/cache@v1
-#         with: 
-#           path: ~/.npm
-#           key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
-#           restore-keys: |
-#             ${{ runner.os }}-node-
-#       - name: Use nodeJS
-#         uses: actions/setup-node@v1
-#         with:
-#           node-version: "12.x"
-#       - run: npm ci
-#       - run: npm run format:check
-#       - run: npm test -- --coverage
-#         env:
-#           CI: true
-#       - name: Upload Test Coverage 
-#         uses: actions/upload-artifact@v1
-#         with: 
-#           name: code-coverage
-#           path: coverage
-#       - name: Build Projects
-#       - if: github.event_name == 'push'
-#       - run: npm run build 
-#       - name: Upload Build Folder
-#       - if: github.event_name == 'push' 
-#         uses: actions/upload-artifact@v1
-#         with: 
-#           name: build
-#           path: build
-#       - name: ZIP Assets 
-#         if: github.event_name == 'push' && github.ref == 'refs/heads/master'
-#         run: |
-#           zip -r build.zip ./build
-#           zip -r coverage.zip ./build
-#       - name: Create a Release
-#         if: github.event_name == 'push' && github.ref == 'refs/heads/master'
-#         run: npx semantic-release
-#         env: 
-#           GITHUB_TOKEN: ${{ secrets.CUSTOM_TOKEN }}
-#       - name: Deploy to Staging
-#         if: github.event_name == 'push' && github.ref == 'refs/heads/develop'
-#         run: npx surge --project ./build --domain silent-apparatus.surge.sh         #install and run surge in 1 line
-#       - name: Deploy to Production
-#         if: github.event_name == 'push' && github.ref == 'refs/heads/master'
-#         run: npx surge --project ./build --domain enormous-poison-prod.sh
-#       - name: Upload Coverage Reports
-#         if: github.event_name == 'push' && github.ref == 'refs/heads/master'
-#         run: npx codecov        #install and run codecov in 1 line
-#         env: 
-#           CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
-#       - name: Open Issue
-#         if: failure() && github.event_name == 'pull_request'
-#         run: |
-#           curl --request POST \
-#           --url https://api.github.com/repos/${{ github.repository }}/issues \
-#           --header 'authorization: Bearer ${{ secrets.CUSTOM_TOKEN }}' \
-#           --header 'content-type: application/json' \
-#           --data '{
-#             "title": "Automated issue for commit: ${{ github.sha }}",
-#             "body": "This issue was automatically created by the GitHub Action workflow **${{ github.workflow }}**. \n\n The commit hash was: _${{ github.sha }}_.",
-#             "assignees": ["${{ github.event.pull_request.user.login }}"]
-#             }'
+jobs:
+  build:
+    runs-on: ubuntu-latest
+    env: 
+      SURGE_LOGIN: ${{ secrets.SURGE_LOGIN }}
+      SURGE_TOKEN: ${{ secrets.SURGE_TOKEN }}
+    steps:
+      - uses: actions/checkout@v2
+      - name: Cache node-modules
+        uses: actions/cache@v1
+        with: 
+          path: ~/.npm
+          key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
+          restore-keys: |
+            ${{ runner.os }}-node-
+      - name: Use nodeJS
+        uses: actions/setup-node@v1
+        with:
+          node-version: "12.x"
+      - run: npm ci
+      - run: npm run format:check
+      - run: npm test -- --coverage
+        env:
+          CI: true
+      - name: Upload Test Coverage 
+        uses: actions/upload-artifact@v1
+        with: 
+          name: code-coverage
+          path: coverage
+      - name: Build Projects
+      - if: github.event_name == 'push'
+      - run: npm run build 
+      - name: Upload Build Folder
+      - if: github.event_name == 'push' 
+        uses: actions/upload-artifact@v1
+        with: 
+          name: build
+          path: build
+      - name: ZIP Assets 
+        if: github.event_name == 'push' && github.ref == 'refs/heads/master'
+        run: |
+          zip -r build.zip ./build
+          zip -r coverage.zip ./build
+      - name: Create a Release
+        if: github.event_name == 'push' && github.ref == 'refs/heads/master'
+        run: npx semantic-release
+        env: 
+          GITHUB_TOKEN: ${{ secrets.CUSTOM_TOKEN }}
+      - name: Deploy to Staging
+        if: github.event_name == 'push' && github.ref == 'refs/heads/develop'
+        run: npx surge --project ./build --domain silent-apparatus.surge.sh         #install and run surge in 1 line
+      - name: Deploy to Production
+        if: github.event_name == 'push' && github.ref == 'refs/heads/master'
+        run: npx surge --project ./build --domain enormous-poison-prod.sh
+      - name: Upload Coverage Reports
+        if: github.event_name == 'push' && github.ref == 'refs/heads/master'
+        run: npx codecov        #install and run codecov in 1 line
+        env: 
+          CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
+      - name: Open Issue
+        if: failure() && github.event_name == 'pull_request'
+        run: |
+          curl --request POST \
+          --url https://api.github.com/repos/${{ github.repository }}/issues \
+          --header 'authorization: Bearer ${{ secrets.CUSTOM_TOKEN }}' \
+          --header 'content-type: application/json' \
+          --data '{
+            "title": "Automated issue for commit: ${{ github.sha }}",
+            "body": "This issue was automatically created by the GitHub Action workflow **${{ github.workflow }}**. \n\n The commit hash was: _${{ github.sha }}_.",
+            "assignees": ["${{ github.event.pull_request.user.login }}"]
+            }'
