--- a/.github/workflows/container.yml
+++ b/.github/workflows/container.yml
@@ -1,54 +1,56 @@
-# name: Container
+name: Container
 
-# on: push
+on: 
+  push:
+    branches: [develop, master22]
 
-# jobs:
-#   docker-steps:
-#     runs-on: ubuntu-latest
-#     #container:
-#     #  image: node:10.18.0-jessie
-#     steps:
-#       # - name: log node version jessie
-#       #   run: node -v
-#       # - name: Step with docker-steps
-#       #   uses: docker://node:12.14.1-alpine3.10
-#       #   with:
-#       #     entrypoint: '/bin/echo'
-#       #     args: 'Hello World'
-#       # - name: Log node with entrypoint
-#       #   uses: docker://node:12.14.1-alpine3.10
-#       #   with:
-#       #     entrypoint: /usr/local/bin/node
-#       #     args: -v
-#       - uses: actions/checkout@v1
-#       - name: give permissions to SH that came from windows
-#         run: |
-#           ls -la
-#           pwd
-#           chmod +x script.sh slack.ps1
-#       - name: Run Script
-#         uses: docker://node:12.14.1-alpine3.10
-#         with:
-#           entrypoint: ./script.sh
-#           args: 'String comming from argument'
-#       - name: Slack message
-#         run: |
-#           /usr/bin/pwsh ./slack.ps1 -ChannelName "testechan" -Message "Message from container in github Actions" -FarfetchToken "${{ secrets.FARFETCHSLACKTOKEN }}"
-#           cat slack.ps1
-#   # node-docker:
-#   #   runs-on: ubuntu-latest
-#   #   services:
-#   #     app: 
-#   #       image: alialaa17/node-api
-#   #       ports: 
-#   #         - 3001:3000
-#   #     mongo:
-#   #       image: mongo
-#   #       ports: 
-#   #         - 27017:27017     
-#   #   steps:
-#   #     - name: Post a user
-#   #       run: 'curl -X POST http://localhost:3001/api/user -H ''Content-Type: application/json'' -d ''{"username": "hello","address": "dwded"}'''
-#   #     - name: Get Users
-#   #       run: curl http://localhost:3001/api/users
+jobs:
+  docker-steps:
+    runs-on: ubuntu-latest
+    #container:
+    #  image: node:10.18.0-jessie
+    steps:
+      # - name: log node version jessie
+      #   run: node -v
+      # - name: Step with docker-steps
+      #   uses: docker://node:12.14.1-alpine3.10
+      #   with:
+      #     entrypoint: '/bin/echo'
+      #     args: 'Hello World'
+      # - name: Log node with entrypoint
+      #   uses: docker://node:12.14.1-alpine3.10
+      #   with:
+      #     entrypoint: /usr/local/bin/node
+      #     args: -v
+      - uses: actions/checkout@v1
+      - name: give permissions to SH that came from windows
+        run: |
+          ls -la
+          pwd
+          chmod +x script.sh slack.ps1
+      - name: Run Script
+        uses: docker://node:12.14.1-alpine3.10
+        with:
+          entrypoint: ./script.sh
+          args: 'String comming from argument'
+      - name: Slack message
+        run: |
+          /usr/bin/pwsh ./slack.ps1 -ChannelName "testechan" -Message "Message from container in github Actions" -FarfetchToken "${{ secrets.FARFETCHSLACKTOKEN }}"
+          cat slack.ps1
+  # node-docker:
+  #   runs-on: ubuntu-latest
+  #   services:
+  #     app: 
+  #       image: alialaa17/node-api
+  #       ports: 
+  #         - 3001:3000
+  #     mongo:
+  #       image: mongo
+  #       ports: 
+  #         - 27017:27017     
+  #   steps:
+  #     - name: Post a user
+  #       run: 'curl -X POST http://localhost:3001/api/user -H ''Content-Type: application/json'' -d ''{"username": "hello","address": "dwded"}'''
+  #     - name: Get Users
+  #       run: curl http://localhost:3001/api/users
 
