--- a/.github/workflows/context.yml
+++ b/.github/workflows/context.yml
@@ -1,43 +1,45 @@
-# name: Context
+name: Context
 
-# on: [pull_request]
+on: 
+  pull_request:
+    branches: [develop, master22]
 
-# jobs:
-#   functions:
-#     runs-on: ubuntu-latest
-#     steps:
-#       - name: dump        
-#         run: |
-#           echo ${{ contains( 'hello', 'll' ) }}
-#           echo ${{ startswith( 'hello', 'he' ) }}
-#           echo ${{ startswith( 'hello', 'lo' ) }}
-#           echo ${{ endswith( 'hello', 'lo' ) }}
-#           echo ${{ format( 'Hello {0} {1} {2}', 'World', '!', '!' ) }}
-#   one:
-#     runs-on: ubuntu-latest
-#     if: github.event_name == 'push'
-#     steps:
-#       - name: Dump GitHub context
-#         env:
-#           GITHUB_CONTEXT: ${{ toJson(github) }}
-#         run: echo "$GITHUB_CONTEXT"
-#       - name: Dump job context
-#         env:
-#           JOB_CONTEXT: ${{ toJson(job) }}
-#         run: echo "$JOB_CONTEXT"
-#       - name: Dump steps context
-#         env:
-#           STEPS_CONTEXT: ${{ toJson(steps) }}
-#         run: echo "$STEPS_CONTEXT"
-#       - name: Dump runner context
-#         env:
-#           RUNNER_CONTEXT: ${{ toJson(runner) }}
-#         run: echo "$RUNNER_CONTEXT"
-#       - name: Dump strategy context
-#         env:
-#           STRATEGY_CONTEXT: ${{ toJson(strategy) }}
-#         run: echo "$STRATEGY_CONTEXT"
-#       - name: Dump matrix context
-#         env:
-#           MATRIX_CONTEXT: ${{ toJson(matrix) }}
-#         run: echo "$MATRIX_CONTEXT"
+jobs:
+  functions:
+    runs-on: ubuntu-latest
+    steps:
+      - name: dump        
+        run: |
+          echo ${{ contains( 'hello', 'll' ) }}
+          echo ${{ startswith( 'hello', 'he' ) }}
+          echo ${{ startswith( 'hello', 'lo' ) }}
+          echo ${{ endswith( 'hello', 'lo' ) }}
+          echo ${{ format( 'Hello {0} {1} {2}', 'World', '!', '!' ) }}
+  one:
+    runs-on: ubuntu-latest
+    if: github.event_name == 'push'
+    steps:
+      - name: Dump GitHub context
+        env:
+          GITHUB_CONTEXT: ${{ toJson(github) }}
+        run: echo "$GITHUB_CONTEXT"
+      - name: Dump job context
+        env:
+          JOB_CONTEXT: ${{ toJson(job) }}
+        run: echo "$JOB_CONTEXT"
+      - name: Dump steps context
+        env:
+          STEPS_CONTEXT: ${{ toJson(steps) }}
+        run: echo "$STEPS_CONTEXT"
+      - name: Dump runner context
+        env:
+          RUNNER_CONTEXT: ${{ toJson(runner) }}
+        run: echo "$RUNNER_CONTEXT"
+      - name: Dump strategy context
+        env:
+          STRATEGY_CONTEXT: ${{ toJson(strategy) }}
+        run: echo "$STRATEGY_CONTEXT"
+      - name: Dump matrix context
+        env:
+          MATRIX_CONTEXT: ${{ toJson(matrix) }}
+        run: echo "$MATRIX_CONTEXT"
