--- a/.github/workflows/env.yml
+++ b/.github/workflows/env.yml
@@ -1,84 +1,86 @@
-# name: ENV Variables
-# on: pull_request
-# env:
-#   WF_ENV: Available to all jobs             #available to all jobs
+name: ENV Variables
+on: 
+  pull_request:
+    branches: [develop, master22]
+env:
+  WF_ENV: Available to all jobs             #available to all jobs
 
-# jobs:
-#   decrypt:
-#     runs-on: ubuntu-latest
-#     steps:
-#     - uses: actions/checkout@v1
-#     - name: Decrypt file
-#       run: |
-#         gpg --quiet --batch --yes --decrypt --passphrase="$PASSPHRASE" --output $HOME/secret.json secret.json.gpg
-#         ls -la        
-#       env:
-#         PASSPHRASE: ${{ secrets.PASSPHRASE }}
-#     - name: Print file content
-#       run: cat $HOME/secret.json        #just for test purpose
-#   create-issue:
-#     runs-on: ubuntu-latest
-#     steps:
-#     - name: Push a random file
-#       run: |                            #"git@github.com:joaopinho-git/github-actions-test.git"
-#         pwd
-#         ls -la
-#         git init 
-#         git remote add origin "https://$GITHUB_ACTOR:${{ secrets.GITHUB_TOKEN }}@github.com/$GITHUB_REPOSITORY.git"
-#         git config --global user.email "my-bot@bot.com"
-#         git config --global user.name "my-bot"
-#         git fetch
-#         git checkout master
-#         git branch --set-upstream-to=origin/master
-#         git pull
-#         ls -la
-#         echo $RANDOM >> random.txt
-#         ls -la
-#         git add .
-#         git commit -m"Random file"
-#         git push
-#     - name: Create issue using REST API 
-#       run: |
-#         curl --request POST \
-#         --url https://api.github.com/repos/${{ github.repository }}/issues \
-#         --header 'authorization: Bearer ${{ secrets.GITHUB_TOKEN }}' \
-#         --header 'content-type: application/json' \
-#         --data '{
-#           "title": "Automated issue for commit: ${{ github.sha }}",
-#           "body": "This issue was automatically created by the GitHub Action workflow **${{ github.workflow }}**. \n\n The commit hash was: _${{ github.sha }}_."
-#           }'
-#   log-env:
-#     runs-on: ubuntu-latest
-#     env:
-#       JOB_ENV: Available to all steps in log-env job    #available to log-env steps
-#     steps:
-#       - name: Log ENV Variables
-#         env:
-#           STEP_ENV: Available to only this step         #available to step
-#         run: |
-#           echo "WF_ENV: ${WF_ENV}"
-#           echo "JOB_ENV: ${JOB_ENV}"
-#           echo "STEP_ENV: ${STEP_ENV}"
-#       - name: Log ENV 2
-#         run: |                                      #this STEP_ENV will not print
-#           echo "WF_ENV: ${WF_ENV}"
-#           echo "JOB_ENV: ${JOB_ENV}"
-#           echo "STEP_ENV: ${STEP_ENV}"
-#   log-default-env:
-#     runs-on: ubuntu-latest
-#     steps:
-#      - name: Default ENV variables  
-#        run: |                                         #this JOB_ENV and STEP_ENV will not print
-#          echo "Home: ${HOME}"
-#          echo "GITHUB_WF: ${GITHUB_WORKFLOW}"
-#          echo "GITHUB_ACTION: ${GITHUB_ACTION}"
-#          echo "GITHUB_ACTIONS: ${GITHUB_ACTIONS}"
-#          echo "GITHUB_ACTOR: ${GITHUB_ACTOR}"
-#          echo "GITHUB_REPOSITORY: ${GITHUB_REPOSITORY}"
-#          echo "GITHUB_EVENT_NAME: ${GITHUB_EVENT_NAME}"
-#          echo "GITHUB_WORKSPACE: ${GITHUB_WORKSPACE}"
-#          echo "GITHUB_SHA: ${GITHUB_SHA}"
-#          echo "GITHUB_REF: ${GITHUB_REF}"
-#          echo "WF_ENV: ${WF_ENV}"
-#          echo "JOB_ENV: ${JOB_ENV}"
-#          echo "STEP_ENV: ${STEP_ENV}"
+jobs:
+  decrypt:
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v1
+    - name: Decrypt file
+      run: |
+        gpg --quiet --batch --yes --decrypt --passphrase="$PASSPHRASE" --output $HOME/secret.json secret.json.gpg
+        ls -la        
+      env:
+        PASSPHRASE: ${{ secrets.PASSPHRASE }}
+    - name: Print file content
+      run: cat $HOME/secret.json        #just for test purpose
+  create-issue:
+    runs-on: ubuntu-latest
+    steps:
+    - name: Push a random file
+      run: |                            #"git@github.com:joaopinho-git/github-actions-test.git"
+        pwd
+        ls -la
+        git init 
+        git remote add origin "https://$GITHUB_ACTOR:${{ secrets.GITHUB_TOKEN }}@github.com/$GITHUB_REPOSITORY.git"
+        git config --global user.email "my-bot@bot.com"
+        git config --global user.name "my-bot"
+        git fetch
+        git checkout master
+        git branch --set-upstream-to=origin/master
+        git pull
+        ls -la
+        echo $RANDOM >> random.txt
+        ls -la
+        git add .
+        git commit -m"Random file"
+        git push
+    - name: Create issue using REST API 
+      run: |
+        curl --request POST \
+        --url https://api.github.com/repos/${{ github.repository }}/issues \
+        --header 'authorization: Bearer ${{ secrets.GITHUB_TOKEN }}' \
+        --header 'content-type: application/json' \
+        --data '{
+          "title": "Automated issue for commit: ${{ github.sha }}",
+          "body": "This issue was automatically created by the GitHub Action workflow **${{ github.workflow }}**. \n\n The commit hash was: _${{ github.sha }}_."
+          }'
+  log-env:
+    runs-on: ubuntu-latest
+    env:
+      JOB_ENV: Available to all steps in log-env job    #available to log-env steps
+    steps:
+      - name: Log ENV Variables
+        env:
+          STEP_ENV: Available to only this step         #available to step
+        run: |
+          echo "WF_ENV: ${WF_ENV}"
+          echo "JOB_ENV: ${JOB_ENV}"
+          echo "STEP_ENV: ${STEP_ENV}"
+      - name: Log ENV 2
+        run: |                                      #this STEP_ENV will not print
+          echo "WF_ENV: ${WF_ENV}"
+          echo "JOB_ENV: ${JOB_ENV}"
+          echo "STEP_ENV: ${STEP_ENV}"
+  log-default-env:
+    runs-on: ubuntu-latest
+    steps:
+     - name: Default ENV variables  
+       run: |                                         #this JOB_ENV and STEP_ENV will not print
+         echo "Home: ${HOME}"
+         echo "GITHUB_WF: ${GITHUB_WORKFLOW}"
+         echo "GITHUB_ACTION: ${GITHUB_ACTION}"
+         echo "GITHUB_ACTIONS: ${GITHUB_ACTIONS}"
+         echo "GITHUB_ACTOR: ${GITHUB_ACTOR}"
+         echo "GITHUB_REPOSITORY: ${GITHUB_REPOSITORY}"
+         echo "GITHUB_EVENT_NAME: ${GITHUB_EVENT_NAME}"
+         echo "GITHUB_WORKSPACE: ${GITHUB_WORKSPACE}"
+         echo "GITHUB_SHA: ${GITHUB_SHA}"
+         echo "GITHUB_REF: ${GITHUB_REF}"
+         echo "WF_ENV: ${WF_ENV}"
+         echo "JOB_ENV: ${JOB_ENV}"
+         echo "STEP_ENV: ${STEP_ENV}"
