--- a/.github/workflows/actions2.yml
+++ b/.github/workflows/actions2.yml
@@ -4,6 +4,15 @@ jobs:
     runs-on: ubuntu-latest
     steps: 
       - uses: actions/checkout@v2
+      - uses: ./.github/actions/issue
+        id: issue
+        with: 
+          token: ${{ secrets.GITHUB_TOKEN }}
+          title: title
+          body: body
+          assignees: 'joaopinho-git'
+      - run: |
+          echo ${{ steps.issue.outputs.issue }}
       - uses: ./.github/actions/hello
         id: hello
         with:
