--- a/.github/workflows/actions2.yml
+++ b/.github/workflows/actions2.yml
@@ -10,7 +10,8 @@ jobs:
           token: ${{ secrets.GITHUB_TOKEN }}
           title: title
           body: body
-          assignees: 'joaopinho-git'
+          assignees: |
+            joaopinho-git
       - run: |
           echo ${{ steps.issue.outputs.issue }}
       - uses: ./.github/actions/hello
