--- a/.github/actions/issue/action.yml
+++ b/.github/actions/issue/action.yml
@@ -10,8 +10,10 @@ inputs:
     required: true
   body:
     description: "Issue Body"
+    required: true
   assignees:
     description: "Issue Assignees"
+    required: true
 outputs:
   issue: # id of output
     description: "The issue object as a json string"
