--- a/.github/workflows/actions2.yml
+++ b/.github/workflows/actions2.yml
@@ -4,6 +4,8 @@ jobs:
     runs-on: ubuntu-latest
     steps: 
       - uses: actions/checkout@v2
+      - run: |
+          chmod +X ./entrypoint.sh
       - uses: ./.github/actions/issue
         id: issue
         with: 
