fix:entrypoint permissions

--- a/.github/workflows/actions2.yml
+++ b/.github/workflows/actions2.yml
@@ -5,7 +5,9 @@ jobs:
     steps: 
       - uses: actions/checkout@v2
       - run: |
-          chmod +X entrypoint.sh
+          ls -la
+          pwd
+          chmod +x entrypoint.sh
       - uses: ./.github/actions/issue
         id: issue
         with: 
