fix:entrypoint permissions

--- a/.github/workflows/actions2.yml
+++ b/.github/workflows/actions2.yml
@@ -26,5 +26,5 @@ jobs:
         with:
           who-to-greet: "World"
       - run: |
-         echo "Time: ${{ steps.hello.outputs.time }}"
+         echo "Time: ${{ steps.hello-docker.outputs.time }}"
          echo $HELLO
