--- a/.github/workflows/change.yml
+++ b/.github/workflows/change.yml
@@ -15,10 +15,11 @@ jobs:
           pwd
           pip install --upgrade pip
           pip install -r ./requirements.txt
-          sed -i 's/__GITHUB_KEY__/${{ secrets.POCARALHO }}/g' .src/vault/configs/config.json
-          sed -i 's/__VAULT_TOKEN__/${{ secrets.VAULT_TOKEN }}/g' .src/vault/configs/config.json
+          echo "Replaces"
+          sed -i 's/__GITHUB_KEY__/${{ secrets.POCARALHO }}/g' src/vault/configs/config.json
+          sed -i 's/__VAULT_TOKEN__/${{ secrets.VAULT_TOKEN }}/g' src/vault/configs/config.json
       - name: python Commands
         run: |
           print("Start running main.py")
-          ./src/vault/main.py
+          src/vault/main.py
         shell: python
